Target Java 17 and replace List.getFirst/getLast with Java 17-compatible index access.
Co-authored-by: Cursor <cursoragent@cursor.com>