@@ -32,8 +32,8 @@ class ActivityFeedServiceTest {
         feed.recordLogin(user);
 
         assertThat(feed.recent(5)).hasSize(1);
-        assertThat(feed.recent(1).getFirst().type()).isEqualTo(ActivityType.USER_LOGIN);
-        assertThat(feed.recent(1).getFirst().messageHighlight()).isEqualTo("Activity Tester");
+        assertThat(feed.recent(1).get(0).type()).isEqualTo(ActivityType.USER_LOGIN);
+        assertThat(feed.recent(1).get(0).messageHighlight()).isEqualTo("Activity Tester");
         assertThat(repository.count()).isEqualTo(1);
     }
 
@@ -47,7 +47,7 @@ class ActivityFeedServiceTest {
         feed.recordHealthStatusChange(system, HealthStatus.UP, HealthStatus.DOWN);
 
         assertThat(feed.recent(5)).hasSize(1);
-        assertThat(feed.recent(1).getFirst().type()).isEqualTo(ActivityType.HEALTH_DOWN);
+        assertThat(feed.recent(1).get(0).type()).isEqualTo(ActivityType.HEALTH_DOWN);
         assertThat(repository.findAll()).hasSize(1);
     }
 
@@ -58,8 +58,8 @@ class ActivityFeedServiceTest {
 
         feed.recordUserRoleChanged(actor, target, "Monitoring", "Tester");
 
-        assertThat(feed.recent(1).getFirst().type()).isEqualTo(ActivityType.USER_ROLE_CHANGED);
-        assertThat(feed.recent(1).getFirst().messageSuffix()).contains("Tester");
+        assertThat(feed.recent(1).get(0).type()).isEqualTo(ActivityType.USER_ROLE_CHANGED);
+        assertThat(feed.recent(1).get(0).messageSuffix()).contains("Tester");
         assertThat(repository.count()).isEqualTo(1);
     }
 
@@ -73,7 +73,7 @@ class ActivityFeedServiceTest {
         feed.recordLogin(new AppUser("dev-admin", "admin@opsconsole.local", "Administrator", null));
 
         assertThat(feed.recentHealthIncidents(5)).hasSize(1);
-        assertThat(feed.recentHealthIncidents(1).getFirst().type()).isEqualTo(ActivityType.HEALTH_DOWN);
-        assertThat(feed.recentHealthIncidents(1).getFirst().messageHighlight()).isEqualTo("Billing API");
+        assertThat(feed.recentHealthIncidents(1).get(0).type()).isEqualTo(ActivityType.HEALTH_DOWN);
+        assertThat(feed.recentHealthIncidents(1).get(0).messageHighlight()).isEqualTo("Billing API");
     }
 }
